crates/artemis_domain/src/transformer/snapshots/artemis_domain__transformer__drop_reasoning_details__tests__drop_reasoning_details_preserves_non_text_messages.snap
---
source: crates/artemis_domain/src/transformer/drop_reasoning_details.rs
expression: snapshot
---
transformation: DropReasoningDetails_preserve_non_text
before:
  messages:
    - text:
        role: User
        content: User with reasoning
        reasoning_details:
          - text: User reasoning
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - image:
        url: "data:image/png;base64,image_data"
        mime_type: image/png
    - tool:
        name: preserve_tool
        call_id: call_preserve
        output:
          is_error: false
          values:
            - text: Tool output
  reasoning:
    enabled: true
after:
  messages:
    - text:
        role: User
        content: User with reasoning
    - image:
        url: "data:image/png;base64,image_data"
        mime_type: image/png
    - tool:
        name: preserve_tool
        call_id: call_preserve
        output:
          is_error: false
          values:
            - text: Tool output
