crates/artemis_domain/src/transformer/snapshots/artemis_domain__transformer__drop_reasoning_details__tests__drop_reasoning_details_removes_reasoning.snap
---
source: crates/artemis_domain/src/transformer/drop_reasoning_details.rs
expression: snapshot
---
transformation: DropReasoningDetails
before:
  messages:
    - text:
        role: User
        content: User message with reasoning
        reasoning_details:
          - text: I need to think about this
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - text:
        role: Assistant
        content: Assistant response with reasoning
        reasoning_details:
          - text: I need to think about this
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
after:
  messages:
    - text:
        role: User
        content: User message with reasoning
    - text:
        role: Assistant
        content: Assistant response with reasoning
